resolves #136 column alignment

--- a/srp/2.0.0/css/srp.css
+++ b/srp/2.0.0/css/srp.css
@@ -194,6 +194,7 @@ form .criteria input {
 }
 .number {
   text-align: right;
+  width: 8em;
 }
 .beta,
 .omny-bar {
